[metadata]
name = iris-tempest
summary = Tempest plugins for the Iris project
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    iris_tempest_plugin

[compile_catalog]
directory = iris_tempest_plugin/locale
domain = iris_tempest_plugin

[update_catalog]
domain = iris_tempest_plugin
output_dir = iris_tempest_plugin/locale
input_file = iris_tempest_plugin/locale/iris_tempest_plugin.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = iris_tempest_plugin/locale/iris_tempest_plugin.pot
